--- a/关系提取综述.md
+++ b/关系提取综述.md
@@ -8,13 +8,21 @@
 ## 导论
 关系提取是指从无结构文本中提取实体之间的关系，从而将其转化为结构化信息的过程。关系定义在实体的元组$ t = (e_1, e_2, ..., e_n) $ 之上。大多数关系提取系统着重于提取二元关系，例如*坐落于（卡耐基梅隆大学，匹兹堡）*，*父亲（Manuel Blum, Avrim Blum）*。高阶关系与之类似。
 
-我们将讨论有监督方法，将关系提取问题公式化为二分类问题。之后我们将讨论基于特征的监督方法(Kambhatla, 2004)(Zhao & Grishman, 2005)和基于核的监督方法。核方法的优点是能够高效地在多项式时间内搜索足够大的特征空间（通常是指数级的，在某些例子中是无穷的），并且不需要显式地表示特征。我们将讨论并对比树形核、子序列核和依存树核。
+有监督方法：将关系提取问题公式化为二分类问题：
 
-近期，半监督方法和bootstrapping方法引起了注意，例如DIPRE(Brin, 1998)和Snowball(Agichtein & Gravano, 2000)，这类方法只需要少量的人工标记的种子实例或少量的人工提取模式来启动训练，使用了类似于Yarowsky的词语消歧义算法的半监督方法；另外KnowItAll(Etzioni, 2005)和TextRunner(Banko, 2007)提出了使用自训练关系二分类器的大规模关系提取系统。
+- 基于特征的监督方法(Kambhatla, 2004)(Zhao & Grishman, 2005)
+- 基于核的监督方法：能够高效地在多项式时间内搜索足够大的特征空间（通常是指数级的，在某些例子中是无穷的），并且不需要显式地表示特征。
+  - 树形核、子序列核、依存树核。
+
+半监督方法和bootstrapping方法：
+
+- DIPRE(Brin, 1998)和Snowball(Agichtein & Gravano, 2000)，这类方法只需要少量的人工标记的种子实例或少量的人工提取模式来启动训练，使用了类似于Yarowsky的词语消歧义算法的半监督方法；
+- KnowItAll(Etzioni, 2005)和TextRunner(Banko, 2007)提出了使用自训练关系二分类器的大规模关系提取系统。
 
 ## 有监督方法
-出于简便，我们仅讨论两个实体之间的二元关系。多元关系在之后讨论。给定一个句子$S = w_1, w_2, ..., e_1, ..., w_j, ..., e_2, ..., w_n$，其中$e_1, e_2$是实体，我们给出一个映射函数$f$：
+出于简便，我们仅讨论两个实体之间的二元关系。多元关系在之后讨论。
 
+给定一个句子$S = w_1, w_2, ..., e_1, ..., w_j, ..., e_2, ..., w_n$，其中$e_1, e_2$是实体，我们给出一个映射函数$f$：
 $$
 f_R(T(S)) = 
 \left\{  
@@ -25,10 +33,15 @@ f_R(T(S)) =
 \right.  
 $$
 
-其中$T(S)$是从S中提取的特征。映射函数$f$决定了句子中的实体之间是否存在一个关系。换言之，实体关系提取这一任务变成了实体关系“识别”。如果标记的正样例和负样例数据可以用来训练，则函数$f$可以被构建成一个判别分类器（例如感知器、支持向量机等），经过预处理（词性标注、依存分析）之后用文本级特征来训练。从另一角度来说，分类器的输入也可以是结构化表示，如解析树。由于分类器训练的输入的不同，监督方法也可以分为基于特征的方法和核方法。
+其中$T(S)$是从S中提取的特征。映射函数$f$为+1表示实体之间存在关系，$f$为-1表示实体之间不存在关系。如果标记的正样例和负样例数据可以用来训练，则函数$f$可以被构建成一个判别分类器（例如感知器、支持向量机等），经过预处理（词性标注、依存分析）之后用文本级特征来训练。分类器的输入也可以是结构化表示，如解析树。由于分类器训练的输入的不同，监督方法也可以分为基于特征的方法和核方法。
 
 ### 基于特征的方法
-从文本中提取的句法和语义的特征，可以作为判定句子中的实体是否有某种关系的线索。句法特征包括：实体本身，实体类别，实体之间的词序列，实体之间的词的数量，解析树中实体之间的路径。语义特征包括：依存分析树中实体之间的路径。这些特征都可以在特征向量中表示并输入到分类器中。
+从文本中提取的句法和语义的特征，可以作为判定句子中的实体是否有某种关系的线索。
+
+- 句法特征：实体本身，实体类别，实体之间的词序列，实体之间的词的数量，解析树中实体之间的路径。
+- 语义特征：依存分析树中实体之间的路径。
+
+这些特征都可以在特征向量中表示并输入到分类器中。
 
 自然语言处理的应用往往涉及输入数据的结构化表示，因此仅使用相关特征的子集很难达到最优。作为补充，人们设计了专用于关系提取的核，用于更充分地利用输入数据的表示。
 
@@ -58,13 +71,33 @@ K(x,y)=\phi(x)^T \phi(y) = \sum_{u \in U}\phi_u(x)^T \phi_u(y)
 $$
 这一相似度的计算可以使用动态规划，复杂度为$O(|x|||y|^2)$。
 
-上述公式更泛化的解释是：如果x和y是两个对象，$K(x,y)$计算的是他们之间结构的共同点，从而计算他们的相似度。在关系提取中，如果$x^+$和$x^-$分别表示训练数据中的正样例和负样例，而y表示测试样例，则$K(x^+,y)>K(x^-,y)$意味着y包含一个关系（y更接近正样例）。实际上$K(x,y)$就是支持向量机和感知机中使用的相似性函数。在关系提取中，$x^+$、$x^-$和y可以用实体之间的词序列和包含实体的解析树表示。
+如果x和y是两个对象，$K(x,y)$可以理解为：通过计算他们之间结构的共同点，从而计算他们的相似度。
+
+在关系提取中，如果$x^+$和$x^-$分别表示训练数据中的正样例和负样例，而y表示测试样例，则$K(x^+,y)>K(x^-,y)$意味着y包含一个关系（y更接近正样例）。实际上$K(x,y)$就是支持向量机和感知机中使用的相似性函数。在关系提取中，$x^+$、$x^-$和y可以用实体之间的词序列和包含实体的解析树表示。
 
 #### 特征包核(Bag of features)
 以句子"*The headquarters of* **Google** *are situated in* **Mountain View**"为例。已知Google和Mountain View是实体，词situated和headquarters表明*机构-位置*关系，则我们可以得出：实体的上下文可以用来判定它们之间是否有关系。句子s中包含实体$e_1$和$e_2$，可以被表示为$s = sb\ e_1\ sm\ e_2\ sa$，其中sb、sm、sa分别表示在实体之前、之间、之后的上下文词。给定测试样例句子t，t包含实体实体$e'_1$和$e'_2$，使用子序列和计算两个句子的三组上下文之间的相似度（这里使用词语级序列，而不是字符级序列），得到三个子核，三个子核结合就得到了最终的核。用子序列核结合支持向量机，显著提高了关系提取的准确率。
 
 #### 树形核
 
-与之前的方法相比，树形核用句子的结构化浅解析树（shallow parsing tree）
+树形核用于计算两个entity-augmented shallow parse tree结构之间的相似度。（之所以使用shallow parse tree而不用完全的解析树，是因为shallow parse tree的鲁棒性和稳定性更好。）Shallow parser用实体信息和短语信息来使树增强。给定一个shallow parse：
 
+- 正样例：枚举最低的覆盖相关的实体的子树；
 
+- 负样例：如果子树不覆盖两个相关的实体。
+
+样例树中的每个节点有三个属性：
+- entity role(人，机构，非实体) 
+
+- chunk type(如NP, VP)
+
+- 节点覆盖的文本
+
+树形核的核函数是在字符串核的基础上改进的，计算两个shallow parse tree之间的结构共同点：计算两个shallow parse tree的公共子树个数的加权和。如下递归计算：
+给定两个子树，根节点分别为$T_1$和$T_2$：
+- 1、比较$T_1$和$T_2$的三种属性，如果不匹配，则返回相似度0；
+- 2、如果三种属性匹配，则在总分上加1，并比较$T_1$和$T_2$的子节点序列。记$children(T_1)$和$children(T_2)$分别为$T_1$和$T_2$的子节点序列，他们的相似度由公共子节点子序列的数量计算，计算的方法与字符串核相同。
+
+如果m和n是shallow parse tree的节点数，则核的计算复杂度为$O(mn^3)$。
+
+而2005年Bunescu和Mooney观察到：依存树中两个实体之间的最短路径已经包含了充足的信息：若$e_1$和$e_2$是句子中的两个实体而p是它们之间的谓词，则$e_1$和$e_2$之间的最短路径经过p，因为$e_1$和$e_2$是p的参数。
