--- a/关系提取综述.md
+++ b/关系提取综述.md
@@ -54,10 +54,15 @@ $$
 其中
 
 $$
-\phi_a(x)=\phi_c(x)=\phi_t(x) = \lambda \\
-\phi_{at}(x)=\phi_{ca}(x)=\phi_{ct}(x) = \lambda^2\\
+\phi_a(x)=\phi_c(x)=\phi_t(x) = \lambda 
+$$
+$$
+\phi_{at}(x)=\phi_{ca}(x)=\phi_{ct}(x) = \lambda^2 
+$$
+$$
 \phi_{cat}(x) = \lambda^3
 $$
+
 $\lambda$被称为衰减因子，用于惩罚较长的、不相邻的子序列。事实上$\phi_{ct}(cat)$应该比$\phi_{at}(cat)$和$\phi_{ca}(cat)$受到更多惩罚（$\lambda^3$），因为不相邻。对于索引为$i = i_1, i_2, ..., i_{|u|}$的子串$u$，令$u$的长度为$l(i)=i_{|u|}-i_1+1$，$u$在字符串x的高维空间中对应的坐标值为
 
 $$
@@ -100,4 +105,7 @@ $$
 
 如果m和n是shallow parse tree的节点数，则核的计算复杂度为$O(mn^3)$。
 
-而2005年Bunescu和Mooney观察到：依存树中两个实体之间的最短路径已经包含了充足的信息：若$e_1$和$e_2$是句子中的两个实体而p是它们之间的谓词，则$e_1$和$e_2$之间的最短路径经过p，因为$e_1$和$e_2$是p的参数。
+##### 依存树核
+
+2005年Bunescu和Mooney观察到：依存树中两个实体之间的最短路径已经包含了充足的信息：若$e_1$和$e_2$是句子中的两个实体而p是它们之间的谓词，则$e_1$和$e_2$之间的最短路径经过p，因为$e_1$和$e_2$是p的参数。
+（未完待续）
